# image-fingerprint

./: .gitignore  Cargo.toml  data.json  icon.psd
src/: app.rs  corner.rs  fingerprint.rs  gui.rs  lib.rs  linalg.rs  main.rs  storage.rs
src/gui/: file_list.rs  hash_dir.rs  style.rs
