[package]
name = "image-fingerprint"
version = "0.1.0"
authors = ["Dominic Simone <dominic.simone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[profile.release]
opt-level = 3
strip = true

[dependencies]
iced = { version = "0.3", features = ["image", "tokio"]}
iced_native = "0.4"
iced_futures = "0.3"
image = "0.23.14"
clipboard-win = "4.2.1"
rfd = "0.4.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"