[package]
name = "image-fingerprint"
version = "0.2.0"
authors = ["Dominic Simone <dominic.simone@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[profile.release]
opt-level = 3
strip = true

[dependencies]
iced = { version = "0.4", features = ["image", "tokio", "pure"]}
# iced_native = "0.5"
image = "0.23.14"
clipboard-win = "4.4.1"
rfd = "0.8.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"